# object-processing-starter

./: README.md
config/: gatorgrade.yml
objectprocessor/: pyproject.toml
objectprocessor/objectprocessor/: main.py  person.py  process.py
writing/: reflection.md
